crates/weft-snapshots/tests/snapshots/json/example-grid.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: example-grid as json
---
{
  "weft": "0.1",
  "root": {
    "kind": "screen",
    "id": "root",
    "props": {
      "label": "Gallery"
    },
    "children": [
      {
        "kind": "grid",
        "id": "cards",
        "props": {
          "columns": 3,
          "gap": {
            "token": "space.lg"
          },
          "max-width": {
            "token": "size.xl"
          },
          "min-column-width": {
            "token": "size.sm"
          }
        },
        "children": [
          {
            "kind": "text",
            "id": "card-a",
            "children": [
              "Revenue"
            ]
          },
          {
            "kind": "text",
            "id": "card-b",
            "children": [
              "Orders"
            ]
          },
          {
            "kind": "text",
            "id": "card-c",
            "children": [
              "Visitors"
            ]
          }
        ]
      }
    ]
  }
}
